k8s/homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    cert-manager.io/cluster-issuer: "local-ca"
spec:
  ingressClassName: nginx
  rules:
    - host: "homepage.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
  tls:
    - hosts:
        - homepage.local
      secretName: homepage-tls
